--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,17 +3,32 @@
 @tailwind utilities;
 
 
-html,
-body {
-  padding: 0;
-  margin: 0;
+@font-face {
+  font-family: "Outfit";
+  src: url('../assets/fonts/Outfit/static/Outfit-Regular.ttf');
+  font-weight: normal;
+  font-style: normal;
+}
   
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+@font-face {
+  font-family: "Outfit";
+  src: url('../assets/fonts/Outfit/static/Outfit-Bold.ttf');
+  font-weight: bold;
+  font-style: normal;
 }
 
 * {
   box-sizing: border-box;
+}
+
+
+html,
+body {
+  padding: 0;
+  margin: 0;
+  font-family: 'Outfit' , sans-serif;
+  /* font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif; */
 }
 
 
